Fix overflow on linux/windows
Auditors: @aekeus

--- a/less/tabs.less
+++ b/less/tabs.less
@@ -21,7 +21,8 @@
   display: flex;
   flex: 1;
   z-index: 2;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   &.allowDragging {
     -webkit-app-region: drag;
     >* {
